# Paquetado_DI

./: README.md  pyproject.toml
fontes/paquete_exemplo_OliverCastelao/: Explicacion comandos ejecucion  pyproject.toml
paquete_exemplo_OliverCastelao.egg-info/: PKG-INFO  SOURCES.txt
